# java_launch_wrapper

./: .gitignore  .gitmodules  CMakeLists.txt  LICENCE  build.gradle.kts  build.zig  readme.md  settings.gradle.kts
src/main/cpp/: ArgLoader.cpp
src/main/java/oolloo/jlw/: ArgLoader.java  ArgParser.java  CimCommandLineLoader.java  ClassPathInjector.java  CommandLineLoader.java  LibPathReplacer.java  NativeCommandLineLoader.java  Util.java  WmicCommandLineLoader.java  Wrapper.java
src/main/zig/: wrapper.zig
src/test/java/: Test.java
